# tg_stock_bot

./: .env.example  .gitignore  .secrets.baseline  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: code_scan.yml
src/stock_bot/: main.py
src/stock_bot/bot/: dispatcher.py
src/stock_bot/bot/commands/: admins.py  analysis.py  basic.py  history.py  stocks.py  usages.py
src/stock_bot/config/: settings.py
src/stock_bot/core/: services.py
src/stock_bot/infrastructure/: stock_api.py
src/stock_bot/utils/: chart.py  logger.py
