[project]
name = "tg_stock_bot"
version = "0.1.0"
description = "基于 daily_stock_analysis 的 Telegram 股票实时智能分析机器人"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zikyzhang" }
]
keywords = ["telegram", "bot", "stock", "A股", "kline", "llm", "daily_stock_analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Framework :: AsyncIO",
]

requires-python = ">=3.9"

dependencies = [
    "python-telegram-bot==20.8",
    "httpx>=0.26.0,<0.27.0",
    "python-dotenv==1.2.1",
    # 数据处理与图表
    "pandas==1.5.3",
    "numpy<2.0.0",
    "matplotlib>=3.3.4",
    "mplfinance>=0.12.9b7",
]

[project.urls]
Homepage = "https://github.com/zikysc/tg_stock_bot"
Repository = "https://github.com/zikysc/tg_stock_bot"
"Bug Tracker" = "https://github.com/zikysc/tg_stock_bot/issues"
Documentation = "https://github.com/zikysc/tg_stock_bot/blob/main/README.md"

[project.scripts]
stock-bot = "stock_bot.main:main"

# ====================== 开发依赖 ======================
[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "detect-secrets>=1.5.0",
    "ruff>=0.9.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# ====================== Ruff 配置 ======================
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "SIM", "I", "UP", "RUF", "W"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

# ====================== Black 配置（推荐新增） ======================
[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

# ====================== 包查找配置 ======================
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
